--- a/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
@@ -135,7 +135,7 @@
         Piercing: 15
         Slash: 15
   - type: Devourer
-    foodPreference: Humanoid
+    foodPreference: Picky
     shouldStoreDevoured: true
     chemical: Ichor
     healRate: 15.0
@@ -145,6 +145,10 @@
       - Door
       tags:
       - Wall
+    storageWhitelist:
+      components:
+      - HumanoidAppearance
+      - BorgChassis
   - type: Tag
     tags:
     - CannotSuicide
