Update Map Pool

--- a/Resources/Prototypes/Maps/Pools/default.yml
+++ b/Resources/Prototypes/Maps/Pools/default.yml
@@ -7,15 +7,15 @@
   - Box
   #- Cluster
   #- Core
-  - Cog
-  - Fland
+  #- Cog
+  #- Fland
   #- Gemini
   - Marathon
   - Meta
   #- Omega
-  - Oasis
-  - Origin
+  #- Oasis
+  #- Origin
   #- Saltern
   #- Packed
-  - Reach
-  - Train
+  #- Reach
+  #- Train
