Add a saline syringe to the combat medical kit (#29954)
saline

--- a/Resources/Prototypes/Catalog/Fills/Items/firstaidkits.yml
+++ b/Resources/Prototypes/Catalog/Fills/Items/firstaidkits.yml
@@ -109,6 +109,7 @@
       - id: MedicatedSuture
       - id: RegenerativeMesh
       - id: SyringeEphedrine
+      - id: SyringeSaline
       - id: BruteAutoInjector
       - id: BurnAutoInjector
 
