--- a/Resources/Prototypes/Entities/Objects/Fun/Instruments/instruments_misc.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/Instruments/instruments_misc.yml
@@ -142,7 +142,7 @@
     tags:
     - Sidearm
     - BrassInstrument
-    - BaseInstrument # GreyStation
+    - BasicInstrument # GreyStation
 
 - type: entity
   parent: BaseHandheldInstrument
