--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/leaves.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/leaves.yml
@@ -18,12 +18,14 @@
         - ReagentId: THC
           Quantity: 15
   - type: FoodSequenceElement
+    sprite:
+      sprite: Objects/Specific/Hydroponics/cannabis.rsi
+      state: produce
     entries:
       burger:
         name: food-sequence-burger-content-cannabis
-        sprite:
-          sprite: Objects/Specific/Hydroponics/cannabis.rsi
-          state: produce
+      taco:
+        name: food-sequence-content-cannabis
 
 - type: entity
   name: green marijuana leaves
@@ -43,12 +45,14 @@
         - ReagentId: THC
           Quantity: 15
   - type: FoodSequenceElement
+    sprite:
+      sprite: Objects/Specific/Hydroponics/cannabis.rsi
+      state: produce
     entries:
       burger:
         name: food-sequence-burger-content-cannabis
-        sprite:
-          sprite: Objects/Specific/Hydroponics/cannabis.rsi
-          state: produce
+      taco:
+        name: food-sequence-content-cannabis
 
 - type: entity
   name: dried cannabis leaves
@@ -68,13 +72,6 @@
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/tobacco.rsi
     state: dried
-  - type: FoodSequenceElement
-    entries:
-      burger:
-        name: food-sequence-burger-content-cannabis
-        sprite:
-          sprite: Objects/Specific/Hydroponics/tobacco.rsi
-          state: dried
 
 - type: entity
   name: ground cannabis
@@ -103,13 +100,6 @@
       - Smokable
   - type: Item
     size: Tiny
-  - type: FoodSequenceElement
-    entries:
-      burger:
-        name: food-sequence-burger-content-cannabis
-        sprite:
-          sprite: Objects/Misc/reagent_fillings.rsi
-          state: powderpile
 
 - type: entity
   name: rainbow cannabis leaves
@@ -143,12 +133,14 @@
         - ReagentId: Psicodine
           Quantity: 0.6
   - type: FoodSequenceElement
+    sprite:
+      sprite: Objects/Specific/Hydroponics/rainbow_cannabis.rsi
+      state: produce
     entries:
       burger:
         name: food-sequence-burger-content-rainbow-cannabis
-        sprite:
-          sprite: Objects/Specific/Hydroponics/rainbow_cannabis.rsi
-          state: produce
+      taco:
+        name: food-sequence-content-rainbow-cannabis
 
 - type: entity
   name: dried rainbow cannabis leaves
@@ -179,13 +171,6 @@
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/rainbow_cannabis.rsi
     state: dried
-  - type: FoodSequenceElement
-    entries:
-      burger:
-        name: food-sequence-burger-content-rainbow-cannabis
-        sprite:
-          sprite: Objects/Specific/Hydroponics/rainbow_cannabis.rsi
-          state: dried
 
 - type: entity
   name: ground rainbow cannabis
@@ -219,13 +204,6 @@
   - type: Construction
     graph: smokeableGroundCannabisRainbow
     node: groundRainbow
-  - type: FoodSequenceElement
-    entries:
-      burger:
-        name: food-sequence-burger-content-rainbow-cannabis
-        sprite:
-          sprite: Objects/Specific/Hydroponics/rainbow_cannabis.rsi
-          state: powderpile_rainbow
 
 - type: entity
   name: tobacco leaves
@@ -284,10 +262,3 @@
       - Smokable
   - type: Item
     size: Tiny
-  - type: FoodSequenceElement
-    entries:
-      burger:
-        name: food-sequence-burger-content-tobacco
-        sprite:
-          sprite: Objects/Misc/reagent_fillings.rsi
-          state: powderpile
