--- a/Resources/Maps/box.yml
+++ b/Resources/Maps/box.yml
@@ -11448,7 +11448,7 @@ entities:
       pos: 24.5,16.5
       parent: 8364
     - type: Door
-      secondsUntilStateChange: -4258.8877
+      secondsUntilStateChange: -4380.646
       state: Opening
     - type: DeviceLinkSource
       lastSignals:
@@ -17015,6 +17015,13 @@ entities:
     components:
     - type: Transform
       pos: 5.6363735,-36.502228
+      parent: 8364
+- proto: ButtonFrameExit
+  entities:
+  - uid: 3810
+    components:
+    - type: Transform
+      pos: 24.5,-21.5
       parent: 8364
 - proto: CableApcExtension
   entities:
@@ -84717,19 +84724,19 @@ entities:
       tags: []
     - type: RefillableSolution
       solution: food
+- proto: FoodKebabSkewer
+  entities:
+  - uid: 21797
+    components:
+    - type: Transform
+      pos: 69.38562,-55.371544
+      parent: 8364
 - proto: FoodMealMint
   entities:
   - uid: 15590
     components:
     - type: Transform
       pos: -35.361305,-43.28145
-      parent: 8364
-- proto: FoodMeatRatdoubleKebab
-  entities:
-  - uid: 21797
-    components:
-    - type: Transform
-      pos: 69.38562,-55.371544
       parent: 8364
 - proto: FoodPieBananaCream
   entities:
@@ -120574,6 +120581,19 @@ entities:
     - type: Transform
       pos: -28.5,-5.5
       parent: 8364
+- proto: LockableButtonChiefMedicalOfficer
+  entities:
+  - uid: 3809
+    components:
+    - type: Transform
+      pos: 24.5,-21.5
+      parent: 8364
+    - type: DeviceLinkSource
+      linkedPorts:
+        2505:
+        - Pressed: Open
+        2506:
+        - Pressed: Open
 - proto: LockerAtmosphericsFilledHardsuit
   entities:
   - uid: 3883
@@ -125242,11 +125262,6 @@ entities:
       parent: 8364
 - proto: PottedPlant23
   entities:
-  - uid: 18310
-    components:
-    - type: Transform
-      pos: 47.5,-36.5
-      parent: 8364
   - uid: 22006
     components:
     - type: Transform
@@ -131950,15 +131965,15 @@ entities:
     - type: Transform
       pos: 15.5,-32.5
       parent: 8364
+  - uid: 3808
+    components:
+    - type: Transform
+      pos: 47.5,-36.5
+      parent: 8364
   - uid: 4661
     components:
     - type: Transform
       pos: 9.5,-56.5
-      parent: 8364
-  - uid: 5450
-    components:
-    - type: Transform
-      pos: 24.5,-22.5
       parent: 8364
   - uid: 8467
     components:
@@ -138288,25 +138303,6 @@ entities:
         6098:
         - Pressed: Toggle
         6099:
-        - Pressed: Toggle
-  - uid: 14147
-    components:
-    - type: Transform
-      pos: 23.5,-21.5
-      parent: 8364
-    - type: DeviceLinkSource
-      linkedPorts:
-        19024:
-        - Pressed: Toggle
-        19023:
-        - Pressed: Toggle
-        19022:
-        - Pressed: Toggle
-        14148:
-        - Pressed: Toggle
-        2941:
-        - Pressed: Toggle
-        3001:
         - Pressed: Toggle
   - uid: 17472
     components:
