--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -1676,9 +1676,10 @@
     sprite: Mobs/Effects/onfire.rsi
     normalState: Mouse_burning
   - type: FoodSequenceElement
-    sprite:
-      sprite: Mobs/Animals/mouse.rsi
-      state: dead-0
+    data:
+      sprite:
+        sprite: Mobs/Animals/mouse.rsi
+        state: dead-0
     entries:
       burger:
         name: food-sequence-burger-content-rat
@@ -1747,9 +1748,10 @@
     size: Tiny
     heldPrefix: 1
   - type: FoodSequenceElement
-    sprite:
-      sprite: Mobs/Animals/mouse.rsi
-      state: dead-1
+    data:
+      sprite:
+        sprite: Mobs/Animals/mouse.rsi
+        state: dead-1
 
 - type: entity
   parent: MobMouse
@@ -1780,9 +1782,10 @@
     size: Tiny
     heldPrefix: 2
   - type: FoodSequenceElement
-    sprite:
-      sprite: Mobs/Animals/mouse.rsi
-      state: dead-2
+    data:
+      sprite:
+        sprite: Mobs/Animals/mouse.rsi
+        state: dead-2
 
 - type: entity
   name: cancer mouse
@@ -3207,9 +3210,10 @@
     sprite: Mobs/Effects/onfire.rsi
     normalState: Mouse_burning
   - type: FoodSequenceElement
-    sprite:
-      sprite: Mobs/Animals/hamster.rsi
-      state: dead-0
+    data:
+      sprite:
+        sprite: Mobs/Animals/hamster.rsi
+        state: dead-0
     entries:
       burger:
         name: food-sequence-burger-content-hamster
