--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -143,9 +143,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/laughin_pea.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/laughin_pea.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-pea
@@ -288,9 +289,10 @@
     - Fruit
     - Banana
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/banana.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/banana.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-banana
@@ -334,9 +336,10 @@
     tags:
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/mimana.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/mimana.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-mimana
@@ -481,9 +484,10 @@
       - ReagentId: Oculine
         Quantity: 2
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/carrot.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/carrot.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-carrot
@@ -516,9 +520,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/cabbage.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/cabbage.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-cabbage
@@ -553,9 +558,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/garlic.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/garlic.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-garlic
@@ -594,9 +600,10 @@
     - Lemon
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/lemon.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/lemon.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-lemon
@@ -634,9 +641,10 @@
     tags:
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/lemoon.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/lemoon.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-lemoon
@@ -666,9 +674,10 @@
     - Lime
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/lime.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/lime.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-lime
@@ -697,9 +706,10 @@
     tags:
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/orange.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/orange.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-orange
@@ -774,9 +784,10 @@
     - Potato
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/potato.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/potato.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-potato
@@ -839,9 +850,10 @@
     - Fruit
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/tomato.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/tomato.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-tomato
@@ -898,9 +910,10 @@
     - Fruit
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/blue_tomato.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/blue_tomato.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-tomato
@@ -950,9 +963,10 @@
     - Fruit # Fuck you they're a fruit
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/blood_tomato.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/blood_tomato.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-tomato
@@ -1022,9 +1036,10 @@
     tags:
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/apple.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/apple.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-apple
@@ -1067,9 +1082,10 @@
     tags:
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/golden_apple.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/golden_apple.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-apple
@@ -1109,9 +1125,10 @@
     tags:
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/cocoa.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/cocoa.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-cocoa
@@ -1156,9 +1173,10 @@
       - ReagentId: Enzyme
         Quantity: 2
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/corn.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/corn.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-corn
@@ -1192,9 +1210,10 @@
         - ReagentId: Cornmeal
           Quantity: 10
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/corn.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/corn.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-corn
@@ -1232,9 +1251,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/onion.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/onion.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-onion
@@ -1272,9 +1292,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/onion_red.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/onion_red.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-onion
@@ -1301,9 +1322,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/chanterelle.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/chanterelle.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-mushroom
@@ -1358,9 +1380,10 @@
     - Fruit
     - Slice
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/pineapple.rsi
-      state: slice
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/pineapple.rsi
+        state: slice
     entries:
       burger:
         name: food-sequence-burger-content-pineapple
@@ -1394,9 +1417,10 @@
     - Vegetable
     - Slice
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/onion.rsi
-      state: slice
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/onion.rsi
+        state: slice
     entries:
       burger:
         name: food-sequence-burger-content-onion
@@ -1430,9 +1454,10 @@
     - Vegetable
     - Slice
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/onion_red.rsi
-      state: slice
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/onion_red.rsi
+        state: slice
     entries:
       burger:
         name: food-sequence-burger-content-onion
@@ -1467,9 +1492,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/chili.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/chili.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-chili
@@ -1507,9 +1533,10 @@
   - type: Produce
     seedId: chilly
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/chilly.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/chilly.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-chilly
@@ -1549,9 +1576,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/aloe.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/aloe.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-aloe
@@ -1590,9 +1618,10 @@
     tags:
     - Flower # TODO add "RedFlower" or "Poppy" tag, when other color flowers will be
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/poppy.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/poppy.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-poppy
@@ -1627,9 +1656,10 @@
     tags:
     - Flower
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/lily.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/lily.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-lily
@@ -1662,9 +1692,10 @@
   - type: Extractable
     grindableSolutionName: food
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/lingzhi.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/lingzhi.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-mushroom
@@ -1715,12 +1746,15 @@
     tags:
     - Ambrosia
   - type: FoodSequenceElement
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/ambrosia_vulgaris.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-ambrosia
-        sprite:
-          sprite: Objects/Specific/Hydroponics/ambrosia_vulgaris.rsi
-          state: produce
+      taco:
+        name: food-sequence-content-ambrosia
 
 - type: entity
   name: ambrosia deus
@@ -1759,9 +1793,10 @@
     tags:
     - Ambrosia
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/ambrosia_deus.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/ambrosia_deus.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-ambrosia
@@ -1795,9 +1830,10 @@
     - Galaxythistle
     - Fruit # Probably?
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/galaxythistle.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/galaxythistle.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-galaxy
@@ -1868,9 +1904,10 @@
     tags:
     - Galaxythistle
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/glasstle.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/glasstle.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-glasstle
@@ -1903,9 +1940,10 @@
     grindableSolutionName: food
   - type: BadFood
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/fly_amanita.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/fly_amanita.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-mushroom
@@ -1946,9 +1984,10 @@
     tags:
     - Fruit # It's in the name
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/gatfruit.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/gatfruit.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-gatfruit
@@ -1984,9 +2023,10 @@
     tags:
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/capfruit.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/capfruit.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-capfruit
@@ -2048,9 +2088,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/soybeans.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/soybeans.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-soy
@@ -2085,9 +2126,10 @@
   - type: Instrument #hehe trumpet
     program: 56
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/spacemans_trumpet.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/spacemans_trumpet.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-spacemans-trumpet
@@ -2122,9 +2164,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/koibean.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/koibean.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-koibean
@@ -2227,9 +2270,10 @@
     - Fruit
     - Slice
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/watermelon.rsi
-      state: slice
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/watermelon.rsi
+        state: slice
     entries:
       burger:
         name: food-sequence-burger-content-watermelon
@@ -2298,9 +2342,10 @@
     tags:
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/berries.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/berries.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-burger-content-berries
@@ -2336,9 +2381,10 @@
     tags:
     - Fruit
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/bungo.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/bungo.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-bungo
@@ -2399,9 +2445,10 @@
     tags:
     - Vegetable
   - type: FoodSequenceElement
-    sprite:
-      sprite: Objects/Specific/Hydroponics/pea.rsi
-      state: produce
+    data:
+      sprite:
+        sprite: Objects/Specific/Hydroponics/pea.rsi
+        state: produce
     entries:
       burger:
         name: food-sequence-content-pea
